--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-hello world
+<html>
+    <head>
+        <title>KPR first</title>
+        <style>
+            p1{
+                color: rgb(97, 2, 186);
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 30px;
+                font-weight: bolder;
+            }
+            p{
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 30px;
+                background-color: #f2f2f2;
+            }
+        </style>
+    </head>
+    <body>
+       <p1>Kaustubh Varsha Prabhakar Ramteke</p1>
+       <p>
+        First time using this feature of github. I am Kaustubh from Nagpur, Maharashtra. Currently doing a java full stack course. Aiming for a job in a product based company.
+       </p> 
+    </body>
+</html>
