--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
     <head>
         <title>KPR first</title>
         <style>
+            p2{
+                color: rgb(255, 8, 8);
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 30px;
+                font-weight: bolder;
+            }
             p1{
                 color: rgb(97, 2, 186);
                 font-family: Arial, Helvetica, sans-serif;
@@ -16,7 +22,14 @@
         </style>
     </head>
     <body>
+       <br>
+       <p2>Date: 4 July 2024</p2>
+       </br>
+       
+       <br> 
        <p1>Kaustubh Varsha Prabhakar Ramteke</p1>
+       </br>
+       
        <p>
         First time using this feature of github. I am Kaustubh from Nagpur, Maharashtra. Currently doing a java full stack course. Aiming for a job in a product based company.
        </p> 
