--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,30 @@
             margin-top: 20px;
             color: #777;
         }
+        .back-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .back-button:hover {
+            background-color: #45a049;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                width: 100%;
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 24px;
+            }
     </style>
 </head>
 <body>
@@ -65,10 +89,7 @@
             <h2>Bank Database</h2>
             <p>The Bank Database project includes the management of banking operations such as account creation, deposits, withdrawals, balance checks, and transaction history. It provides a system to handle user accounts and securely store transactional data.</p>
         </div>
-    </div>
-
-    <div class="footer">
-        <p>For more information, feel free to contact me: <a href="mailto:kaustubhramteke@rediffmail.com">kaustubhramteke@rediffmail.com</a></p>
+        <center><a href="index.html" class="back-button">Back</a><center></center>
     </div>
 </body>
 </html>
