--- a/contact.html
+++ b/contact.html
@@ -46,26 +46,58 @@
 
         textarea {
             resize: none;
-            height: 150px;
+            height: 80px;
         }
 
-        input[type="submit"] {
+        input[type="submit"]{
+            text-decoration: none;
+            font-size: 18px;
             background-color: #4CAF50;
             color: white;
             padding: 10px;
             border: none;
-            border-radius: 5px;
+            border-radius: 11px;
             cursor: pointer;
+            text-align: center;
+            width: 100%;
+        }
+        .back-button {
+            text-decoration: none;
+            font-size: 18px;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 11px;
+            cursor: pointer;
+            text-align: center;
+            width: 95%;
         }
 
-        input[type="submit"]:hover {
-            background-color: #45a049;
+        input[type="submit"]:hover, .back-button:hover {
+            background-color: green;
         }
 
         .footer {
             text-align: center;
             margin-top: 20px;
             color: #555;
+        }
+
+        .footer a {
+            color: blue;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: none;
+        }
+
+        @media (max-width: 60px) {
+            .container {
+                width: 100%;
+                padding: 15px;
+            }
         }
     </style>
 </head>
@@ -83,11 +115,13 @@
             <textarea id="message" name="message" placeholder="Your message" required></textarea>
 
             <input type="submit" value="Submit">
+            <br>
+            <a href="index.html" class="back-button">Back</a>
         </form>
     </div>
 
     <div class="footer">
-        <p>For more information, email us at: <a href="mailto:kaustubhramteke@rediffmail.com">kaustubhramteke@rediffmail.com</a></p>
+        <p>For more information, email me at: <a href="mailto:kaustubhramteke@rediffmail.com">kaustubhramteke@rediffmail.com</a></p>
     </div>
 </body>
 </html>
