--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 margin: 0;
             }
             .date {
-                color: rgb(255, 8, 8);
+                color: green;
                 font-size: 30px;
                 font-weight: bold;
                 text-align: center;
@@ -40,6 +40,7 @@
                 box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             }
             .links {
+            	
                 text-align: center;
                 margin-top: 20px;
             }
@@ -58,7 +59,11 @@
         <header>
             <h1>Welcome to My Profile</h1>
         </header>
-
+<div class="links">
+            <a href="about.html">About Me</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+        </div>
         <p class="date">
             Date: 4 July 2024
         </p>
@@ -72,10 +77,6 @@
             Currently doing a Java full stack course. Aiming for a job in a product-based company.
         </div> 
         
-        <div class="links">
-            <a href="about.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-        </div>
+   
     </body>
 </html>
