--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
                 text-align: center;
             }
             .intro {
-                font-size: 30px;
+                font-size: 25px;
                 background-color: #f2f2f2;
                 padding: 20px;
                 margin: 20px;
                 text-align: center;
                 border-radius: 10px;
-                box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+                box-shadow: 9px 12px 15px rgba(0, 0, 0, 0.1);
             }
             .links {
-            	
                 text-align: center;
                 margin-top: 20px;
             }
@@ -53,16 +52,51 @@
             .links a:hover {
                 color: #0056b3;
             }
+
+            /* CSS */
+            .button-35 {
+                align-items: center;
+                background-color: #fff;
+                border-radius: 12px;
+                box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
+                box-sizing: border-box;
+                color: #121212;
+                cursor: pointer;
+                display: inline-flex;
+                flex: 1 1 auto;
+                font-family: Inter, sans-serif;
+                font-size: 1.2rem;
+                font-weight: 700;
+                justify-content: center;
+                line-height: 1;
+                margin: 0;
+                outline: none;
+                padding: 1rem 1.2rem;
+                text-align: center;
+                text-decoration: none;
+                transition: box-shadow .2s, -webkit-box-shadow .2s;
+                white-space: nowrap;
+                border: 0;
+                user-select: none;
+                -webkit-user-select: none;
+                touch-action: manipulation;
+            }
+
+            .button-35:hover {
+                box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+            }
+
         </style>
     </head>
     <body>
         <header>
             <h1>Welcome to My Profile</h1>
         </header>
-<div class="links">
-            <a href="about.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
+        <div class="links">
+            <!-- Updated button with JavaScript redirection -->
+            <button class="button-35" onclick="window.location.href='about.html'">About Me</button>
+            <button class="button-35" onclick="window.location.href='projects.html'">Projects</button>
+            <button class="button-35" onclick="window.location.href='contact.html'">Contact</button>
         </div>
         <p class="date">
             Date: 4 July 2024
@@ -76,7 +110,5 @@
             First time using this feature of GitHub. I am Kaustubh from Nagpur, Maharashtra.
             Currently doing a Java full stack course. Aiming for a job in a product-based company.
         </div> 
-        
-   
     </body>
 </html>
