--- a/contact.html
+++ b/contact.html
@@ -3,125 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
 
-        .container {
-            width: 50%;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            margin-top: 50px;
-        }
-
-        h2 {
+        header {
+            background-color: #4CAF50;
+            color: white;
             text-align: center;
-            color: #333;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        label {
-            margin-bottom: 5px;
+            padding: 20px 0;
+            font-size: 28px;
             font-weight: bold;
         }
 
-        input[type="text"], input[type="email"], textarea {
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        div {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 22vh;
         }
 
-        textarea {
-            resize: none;
-            height: 80px;
-        }
-
-        input[type="submit"]{
-            text-decoration: none;
+        table {
+            background-color: white;
+            border-collapse: collapse;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 50%;
+            text-align: left;
             font-size: 18px;
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 11px;
-            cursor: pointer;
-            text-align: center;
-            width: 100%;
-        }
-        .back-button {
-            text-decoration: none;
-            font-size: 18px;
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 11px;
-            cursor: pointer;
-            text-align: center;
-            width: 98%;
         }
 
-        input[type="submit"]:hover, .back-button:hover {
-            background-color: green;
+        th, td {
+            padding: 15px;
+            border-bottom: 1px solid #ddd;
+			}
+
+        td {
+            font-weight: bold;
+            color: #333;
         }
 
-        .footer {
-            text-align: center;
-            margin-top: 20px;
-            color: #555;
-        }
-
-        .footer a {
+        a {
+        	font-family:helvetica;
             color: blue;
             text-decoration: none;
         }
 
-        .footer a:hover {
-            text-decoration: none;
-        }
-
-        @media (max-width: 60px) {
-            .container {
-                width: 100%;
-                padding: 15px;
-            }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
+<header>
+Contact Me
+</header>
 <body>
-    <div class="container">
-        <h2>Contact Us</h2>
-        <form action="submit_contact" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Your name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Your email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" placeholder="Your message" required></textarea>
-
-            <input type="submit" value="Submit">
-            <br>
-            <a href="index.html" class="back-button">Back</a>
-        </form>
-    </div>
-
-    <div class="footer">
-        <p>For more information, email me at: <a href="mailto:kaustubhramteke@rediffmail.com">kaustubhramteke@rediffmail.com</a></p>
+    <div>
+        <table>
+            <tr>
+                <td><a href="mailto:kaustubhramteke@rediffmail.com">kaustubhramteke@rediffmail.com</a></td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
