--- a/index.html
+++ b/index.html
@@ -5,96 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KPR First</title>
     <style>
+        /* Global Styles */
         body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #e9ecef;
+            font-family: 'Poppins', Arial, Helvetica, sans-serif;
+            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);
             margin: 0;
             padding: 0;
+            color: #333;
+            overflow-x: hidden;
+            animation: background-move 10s infinite alternate ease-in-out;
         }
+
+        /* Animated Background */
+        @keyframes background-move {
+            0% {
+                background-position: 0% 50%;
+            }
+            100% {
+                background-position: 100% 50%;
+            }
+        }
+
         header {
-            background-color: #343a40;
-            padding: 20px;
+        	color:white;
+            background: linear-gradient(#43C6AC,#191654);
+            padding: 40px 20px;
             text-align: center;
-            color: white;
+            position: relative;
+            overflow: hidden;
+            font-style:consolas;
         }
+
         h1 {
-            font-size: 36px;
+            font-size: 48px;
             margin: 0;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            animation: fade-in 2s ease-in-out;
         }
-        .date {
-            color: green;
-            font-size: 30px;
-            font-weight: bold;
-            text-align: center;
+
+        /* Fade in Animation for Header Text */
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
-        .name {
-            color: rgb(97, 2, 186);
-            font-size: 30px;
-            font-weight: bold;
-            text-align: center;
-        }
-        .intro {
-            font-size: 25px;
-            background-color: #fff9b8;
-            padding: 40px;
-            margin: auto ;
-            text-align: center;
-            border-radius: 44px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-            border: 2px solid #dcdcdc; /* Light gray border */
-            max-width: 800px; /* Optional: limit the width */
-        }
-        .links {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .links button {
-            text-decoration: none;
-            color: white;
-            font-size: 25px;
-            margin: 0 10px;
-        }
-        .button-35 {
-            align-items: center;
-            background-color: #ff7c00;
-            border-radius: 12px;
-            box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
-            box-sizing: border-box;
-            color: #121212;
-            cursor: pointer;
-            display: inline-flex;
-            flex: 1 1 auto;
-            font-family: Inter, sans-serif;
-            font-size: 1.2rem;
-            font-weight: 700;
-            justify-content: center;
-            line-height: 1;
-            margin: 5px;
-            outline: none;
-            padding: 1rem 1.2rem;
-            text-align: center;
-            text-decoration: none;
-            transition: box-shadow .2s, -webkit-box-shadow .2s;
-            white-space: nowrap;
-            border: 0;
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-        }
-        .button-35:hover {
-            box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
-        }
+
         .gradient-text {
             text-align: center;
-            font-size: clamp(1rem, 3vw, 4rem);
+            font-size: clamp(2.4rem, 3vw, 4rem);
             font-weight: bold;
             background: linear-gradient(90deg, #ff6f61, #de64a2, #4b79a1);
             background-size: 300% 300%;
-            -webkit-background-clip: text; /* For Webkit-based browsers */
-            background-clip: text; /* Standard syntax */
-            color: transparent; /* Hide the default text color */
-            animation: gradient-motion 5s ease infinite; /* Apply animation */
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            animation: gradient-motion 5s ease infinite;
         }
+
+        /* Gradient Text Animation */
         @keyframes gradient-motion {
             0% {
                 background-position: 0% 0%;
@@ -106,26 +78,142 @@
                 background-position: 0% 0%;
             }
         }
+
+        .intro {
+            font-size: 22px;
+            background-color: #fffbf5;
+            padding: 40px;
+            margin: 40px auto;
+            text-align: center;
+            border-radius: 30px;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+            border: 2px solid #f0e1d8;
+            max-width: 800px;
+            animation: slide-up 1s ease-out;
+        }
+
+        /* Slide Up Animation for Intro */
+        @keyframes slide-up {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .links {
+            text-align: center;
+            margin-top: 40px;
+        }
+
+        .button-35 {
+            color: white;
+            background: linear-gradient(45deg, #6a11cb, #2575fc);
+            border-radius: 50px;
+            border: none;
+            padding: 10px 30px;
+            font-size: 22px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            position: relative;
+            overflow: hidden;
+            margin-right:15px;
+        }
+
+        /* Button Hover Effect */
+        .button-35:hover {
+            transform: scale(1.1);
+            background: linear-gradient(45deg, #2575fc, #6a11cb);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+        }
+
+        .button-35::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.3);
+            transform: skewX(-45deg);
+            transition: all 0.5s ease;
+        }
+
+        /* Button Shine Effect */
+        .button-35:hover::before {
+            left: 100%;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+            margin-top: 40px;
+            font-size: 14px;
+            letter-spacing: 1px;
+            position: relative;
+        }
+
+        /* Footer Gradient Animation */
+        footer::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 5px;
+            width: 100%;
+            background: linear-gradient(90deg, #ff6f61, #de64a2, #4b79a1);
+            background-size: 400% 400%;
+            animation: gradient-motion 5s ease infinite;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 36px;
+            }
+
+            .button-35 {
+                padding: 12px 30px;
+                font-size: 18px;
+            }
+
+            .intro {
+                padding: 30px;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Welcome to My Profile</h1>
     </header>
+
     <div class="links">
-        <!-- Updated button with JavaScript redirection -->
+        <!-- Updated buttons with animation and hover effect -->
         <button class="button-35" onclick="window.location.href='about.html'">About Me</button>
         <button class="button-35" onclick="window.location.href='projects.html'">Projects</button>
         <button class="button-35" onclick="window.location.href='contact.html'">Contact</button>
         <button class="button-35" onclick="window.location.href='articles/Column.html'">My Column</button>
     </div>
-    
+
     <p class="gradient-text">
-        Kaustubh Varsha Prabhakar Ramteke
+    KAUSTUBH VARSHA PRABHAKAR RAMTEKE
     </p>
-    
+
     <div class="intro">
         First time using this feature of GitHub. I am Kaustubh from Nagpur, Maharashtra. Currently doing a Java full stack course. Aiming for a job in a product-based company.
-    </div> 
+    </div>
+
+    <footer>
+        © 2024 Kaustubh Ramteke | All Rights Reserved
+    </footer>
 </body>
 </html>
