--- a/index.html
+++ b/index.html
@@ -7,52 +7,49 @@
     <style>
         /* Global Styles */
         body {
-            font-family: 'Poppins', Arial, Helvetica, sans-serif;
-            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);
-            margin: 0;
-            padding: 0;
-            color: #333;
-            overflow-x: hidden;
-            animation: background-move 10s infinite alternate ease-in-out;
-        }
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    background: linear-gradient(135deg, white 0%, #ffc366 100%);
+    background-size: 200% 200%; /* Ensures the gradient has space to move */
+    margin: 0;
+    padding: 0;
+    color: #333;
+    overflow-x: hidden;
+    animation: background-move 10s infinite alternate ease-in-out;
+}
 
-        /* Animated Background */
-        @keyframes background-move {
-            0% {
-                background-position: 0% 50%;
-            }
-            100% {
-                background-position: 100% 50%;
-            }
-        }
+/* Animated Background for Body */
+@keyframes background-move {
+    0% {
+        background-position: 0% 50%;
+    }
+    100% {
+        background-position: 100% 50%;
+    }
+}
 
-        header {
-        	color:white;
-            background: linear-gradient(#43C6AC,#191654);
-            padding: 40px 20px;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-            font-style:consolas;
-        }
+h1 {
+    font-size: 48px;
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    animation: fade-in 2s ease-in-out, h1-bg-color-animation 6s infinite alternate ease-in-out;
+    background: linear-gradient(45deg, #43C6AC, #191654, #ff6f61);
+    background-size: 200% 200%;
+    color: white; /* Keep the text color white */
+    padding: 20px;
+    border-radius: 1px; /* Optional: add some rounding to the corners */
+    text-align:center;
+}
 
-        h1 {
-            font-size: 48px;
-            margin: 0;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            animation: fade-in 2s ease-in-out;
-        }
-
-        /* Fade in Animation for Header Text */
-        @keyframes fade-in {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
+/* Animation for h1 background color */
+@keyframes h1-bg-color-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    100% {
+        background-position: 100% 50%;
+    }
+}
 
         .gradient-text {
             text-align: center;
@@ -115,7 +112,7 @@
             border-radius: 50px;
             border: none;
             padding: 10px 30px;
-            font-size: 22px;
+            font-size: 25px;
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s ease-in-out;
@@ -192,9 +189,9 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Profile</h1>
-    </header>
+    
+        <h1>Welcome to My Kingdom</h1>
+
 
     <div class="links">
         <!-- Updated buttons with animation and hover effect -->
