--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
         }
 
         h1 {
-        	margin-top:0px;
+            margin-top: 0px;
             text-align: center;
             color: #333;
         }
@@ -37,7 +37,7 @@
         }
 
         p {
-        	font-size:20px;
+            font-size: 20px;
             color: #555;
             line-height: 1.6;
         }
@@ -47,9 +47,10 @@
             margin-top: 20px;
             color: #777;
         }
+
         .back-button {
             display: inline-block;
-            margin-top: 0px;
+            margin-top: 20px;
             padding: 10px 15px;
             background-color: #4CAF50;
             color: white;
@@ -71,27 +72,25 @@
             h1 {
                 font-size: 24px;
             }
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>My Projects</h1>
+        <h1>My Project</h1>
 
         <div class="project">
-            <h2>User Management System</h2>
-            <p>The User Management System project involves creating, updating, and deleting user accounts. It manages user authentication, roles, and permissions, ensuring secure access to different functionalities within an application.</p>
+            <h2>Product Sales (E-Commerce)</h2>
+            <p>Developed an e-commerce project using the Spring Boot framework & JavaScript for backend development and HTML & CSS for frontend design. The project features user authentication, role-based access for customers and admin, product management, and order processing. Used MySQL for data storage, implementing a relational database structure that supports user profiles, shopping cart functionality, and order tracking.</p>
+            
+            <!-- YouTube video embedded below the project description -->
+            <iframe width=100% height=400 src="https://www.youtube.com/embed/ugK_XPhOVuI?autoplay=1&loop=1&playlist=ugK_XPhOVuI" 
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
         </div>
-
-        <div class="project">
-            <h2>Student Management System</h2>
-            <p>This project allows for managing student details such as registration, updating personal data, tracking student performance, and handling other administrative tasks. It includes CRUD functionalities for maintaining student records.</p>
-        </div>
-
-        <div class="project">
-            <h2>Bank Database</h2>
-            <p>The Bank Database project includes the management of banking operations such as account creation, deposits, withdrawals, balance checks, and transaction history. It provides a system to handle user accounts and securely store transactional data.</p>
-        </div>
-        <center><a href="index.html" class="back-button">Back</a><center></center>
+		
+        <br><center><a href="index.html" class="back-button">Back</a><center></center>
     </div>
 </body>
 </html>
