--- a/about.html
+++ b/about.html
@@ -7,14 +7,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
+            background-color: #e3e3e3;
         }
 
         .container {
-            width: 90%;
-            max-width: 800px;
+            width: 95%;
+            max-width: 90%;
             margin: 0 auto;
             background-color: #fff;
             padding: 20px;
