--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
         .interest-item {
             margin-bottom: 20px;
             padding: 15px;
-            border-left: 5px solid #4CAF50;
+            border-left: 5px solid green;
             background-color: #f2f2f2;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -221,22 +221,24 @@ Amravati University, Maharashtra) </td>
             </tr>
             <tr>
                 <th>Technical Skills</th>
+                
                 <td>
-                    <table class="details-table-3">
-                        <tr>
-                            <th>Front End</th>
-                            <td>HTML, CSS, JavaScript</td>
-                        </tr>
-                        <tr>
-                            <th>Back End</th>
-                            <td>Core Java, Advance Java, MySQL</td>
-                        </tr>
-                        <tr>
-                            <th>Other Concepts</th>
-                            <td>Data Structures & Algorithms, Object Oriented Programming</td>
-                        </tr>
-                    </table>
+                    <ul class="interest-list">
+                        <li class="interest-item">
+                            <span class="interest-title">Front End:</span>
+                            <span class="interest-details">HTML, CSS</span>
+                        </li>
+                        <li class="interest-item">
+                            <span class="interest-title">Back End:</span>
+                            <span class="interest-details">Java, MySQL</span>
+                        </li>
+                        <li class="interest-item">
+                            <span class="interest-title">Other Concept(s):</span>
+                            <span class="interest-details">DSA, OOP</span>
+                        </li>
+                    </ul>
                 </td>
+                
             </tr>
             <tr>
                 <th>Language(s)</th>
