--- a/index.html
+++ b/index.html
@@ -186,6 +186,66 @@ h1 {
                 padding: 30px;
             }
         }
+        
+        .container {
+  color: black;
+  font-size: 2.26rem;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.animation {
+  height:50px;
+  overflow:hidden;
+  margin-left: 1rem;
+}
+
+.animation > div > div {
+  padding: 0.25rem 0.75rem;
+  height:2.81rem;
+  margin-bottom: 2.81rem;
+  display:inline-block;
+}
+
+.animation div:first-child {
+  animation: text-animation 8s infinite;
+}
+
+.first div {
+  font-weight:bold;
+  color:white;
+  background-color:#016f8e;
+  border-radius: 50px;
+}
+.second div {
+  font-weight:bold;
+  color:white;
+  background-color:green;
+  border-radius: 50px;
+}
+.third div {
+  font-weight:bold;
+  color:black;
+  background-color:#fc8a1e;
+  border-radius: 50px;
+}
+
+@keyframes text-animation {
+  0% {margin-top: 0;}
+  10% {margin-top: 0;}
+  20% {margin-top: -5.62rem;}
+  30% {margin-top: -5.62rem;}
+  40% {margin-top: -11.24rem;}
+  60% {margin-top: -11.24rem;}
+  70% {margin-top: -5.62rem;}
+  80% {margin-top: -5.62rem;}
+  90% {margin-top: 0;}
+  100% {margin-top: 0;}
+}
+
+
     </style>
 </head>
 <body>
@@ -200,6 +260,15 @@ h1 {
         <button class="button-35" onclick="window.location.href='contact.html'">Contact</button>
         <button class="button-35" onclick="window.location.href='articles/Column.html'">My Column</button>
     </div>
+
+<main class="container">
+  <p>Hello 👋 I'm</p>
+  <section class="animation">
+    <div class="first"><div>kaustubh</div></div>
+    <div class="second"><div>Computer Engineer</div></div>
+    <div class="third"><div>maharashtrian</div></div>
+  </section>
+</main>
 
     <p class="gradient-text">
     KAUSTUBH VARSHA PRABHAKAR RAMTEKE
