--- a/index.html
+++ b/index.html
@@ -197,20 +197,20 @@ h1 {
 }
 
 .animation {
-  height:50px;
+  height:52px;
   overflow:hidden;
   margin-left: 1rem;
 }
 
 .animation > div > div {
-  padding: 0.25rem 0.75rem;
-  height:2.81rem;
+  padding: 0.1rem 0.9rem;
+  height:2.89rem;
   margin-bottom: 2.81rem;
   display:inline-block;
 }
 
 .animation div:first-child {
-  animation: text-animation 8s infinite;
+  animation: text-animation 9s infinite;
 }
 
 .first div {
@@ -275,7 +275,7 @@ h1 {
     </p>
 
     <div class="intro">
-        First time using this feature of GitHub. I am Kaustubh from Nagpur, Maharashtra. Currently doing a Java full stack course. Aiming for a job in a product-based company.
+        First time using this feature of GitHub. I am Kaustubh from Amravati, Maharashtra. Currently doing a Java full stack course. Aiming for a job in a product-based company.
     </div>
 
     <footer>
