--- a/about.html
+++ b/about.html
@@ -178,8 +178,8 @@
                         
                         <table class="details-table-2">
                         <tr>
-                            <th>Degree</th>
-                            <th>Institution</th>
+                            <th>Qualification</th>
+                            <th>Institute</th>
                             <th>Year of Passing</th>
                             <th>Score</th>
                         </tr>
@@ -261,3 +261,4 @@ Amravati   </td>
 
 </body>
 </html>
+
