--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* Global Styles */
         body {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    background: linear-gradient(135deg, white 0%, #ffc366 100%);
+    background: #B3C2FF;
     background-size: 200% 200%; /* Ensures the gradient has space to move */
     margin: 0;
     padding: 0;
@@ -108,8 +108,8 @@ h1 {
         }
 
         .button-35 {
-            color: white;
-            background: linear-gradient(45deg, #6a11cb, #2575fc);
+            color: black;
+            background: #FFF29C;
             border-radius: 50px;
             border: none;
             padding: 10px 30px;
@@ -126,7 +126,8 @@ h1 {
         /* Button Hover Effect */
         .button-35:hover {
             transform: scale(1.1);
-            background: linear-gradient(45deg, #2575fc, #6a11cb);
+            background: linear-gradient(45deg, #f9a825, #f57f17);
+
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
         }
 
