--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
     object-fit: cover;
     border: 4px solid #0f2027;
     background: #0f2027;
+    user-select: none;
+    pointer-events: none;
+
 }
 
 /* Hover Effect */
@@ -154,11 +157,7 @@
     box-shadow: 0 0 40px rgba(255, 140, 0, 0.9);
 }
 
-/* Rotation Animation */
-@keyframes rotate-ring {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
-}
+
 
 /* Responsive */
 @media (max-width: 600px) {
