--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Projects</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,18 +15,36 @@
 
         .container {
             width: 70%;
-            margin: 0 auto;
+            margin: 20px auto;
             background-color: #fff;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            margin-top: 10px;
+        }
+
+        .top-bar {
+            display: flex;
+            justify-content: flex-start;
+            margin-bottom: 10px;
+        }
+
+        .back-button {
+            padding: 8px 15px;
+            background-color: #4CAF50;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .back-button:hover {
+            background-color: #45a049;
         }
 
         h1 {
-            margin-top: 0px;
             text-align: center;
             color: #333;
+            margin-top: 5px;
         }
 
         .project {
@@ -37,60 +56,74 @@
         }
 
         p {
-            font-size: 20px;
+            font-size: 18px;
             color: #555;
             line-height: 1.6;
         }
 
+        iframe {
+            width: 100%;
+            height: 400px;
+            border-radius: 8px;
+            margin-top: 15px;
+        }
+
         .footer {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 30px;
             color: #777;
-        }
-
-        .back-button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 15px;
-            background-color: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 20px;
-        }
-
-        .back-button:hover {
-            background-color: #45a049;
         }
 
         @media (max-width: 600px) {
             .container {
-                width: 100%;
+                width: 95%;
                 padding: 15px;
             }
 
-            h1 {
-                font-size: 24px;
+            iframe {
+                height: 250px;
             }
         }
     </style>
 </head>
+
 <body>
+
     <div class="container">
+
+        <!-- Back button on top -->
+        <div class="top-bar">
+            <a href="index.html" class="back-button">← Back</a>
+        </div>
+
         <h1>My Project</h1>
 
         <div class="project">
             <h2>Product Sales (E-Commerce)</h2>
-            <p>Developed an e-commerce project using the Spring Boot framework & JavaScript for backend development and HTML & CSS for frontend design. The project features user authentication, role-based access for customers and admin, product management, and order processing. Used MySQL for data storage, implementing a relational database structure that supports user profiles, shopping cart functionality, and order tracking.</p>
-            
-            <!-- YouTube video embedded below the project description -->
-            <iframe width=100% height=400 src="https://www.youtube.com/embed/ugK_XPhOVuI?autoplay=1&loop=1&playlist=ugK_XPhOVuI" 
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+
+            <p>
+                Developed an e-commerce project using Spring Boot and JavaScript for backend
+                development and HTML & CSS for frontend design. The project includes user
+                authentication, role-based access, product management, order processing,
+                and MySQL-based data storage with shopping cart and order tracking features.
+            </p>
+
+            <!-- User-initiated video playback -->
+            <iframe
+                src="https://www.youtube.com/embed/ugK_XPhOVuI"
+                title="E-Commerce Project Demo"
+                frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
             </iframe>
         </div>
-		
-        <br><center><a href="index.html" class="back-button">Back</a><center></center>
+
+        <div class="footer">
+            © 2026 Costub's Portfolio
+        </div>
+
     </div>
+
 </body>
 </html>
