--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer {
 
 /* Animated Identity Section */
 .container1 {
-    color: black;
+    color: white;
     font-size: 2rem;
     text-transform: uppercase;
     display: flex;
