--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ body {
 
 main { flex: 1; text-align: center; padding: 40px 20px; }
 
-h1 { color: white; font-size: 2.5rem; margin-bottom: 20px; }
+h1 { color: white; font-size: 2.5rem; margin-top: 0px; }
 
 /* NAME BOX */
 .name-box {
     position: relative;
     display: inline-block;
-    padding: 50px 80px;
+    padding: 20px 80px;
     border-radius: 15px;
     overflow: hidden;
     background: rgba(255,255,255,0.05);
@@ -66,13 +66,13 @@ h1 { color: white; font-size: 2.5rem; margin-bottom: 20px; }
 @keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
 /* LINKS */
-.links { margin-top: 40px; }
+.links { margin-top: 7px; }
 .button-35 {
     background: #FFD000;
     border: none;
     padding: 12px 30px;
     margin: 10px;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
     border-radius: 50px;
     cursor: pointer;
@@ -125,17 +125,18 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 40px 0;
+    margin: 5px 0;
     gap: 10px;
     flex-wrap: wrap;
+    height:3.3rem;
 }
 .animation {
-    height: 2.8rem;
+    height: 3.5rem;
     overflow: hidden;
 }
 /* Animation fix */
 .animation {
-    height: 2.8rem;
+    height: 3rem;
     overflow: hidden;
 }
 /* Slider container */
@@ -158,16 +159,16 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 15px;
+    padding: 0 8px;
     border-radius: 25px;
     color: white;
     font-weight: bold;
     text-transform: capitalize;
 }
 
-.first { background-color: #016f8e; }
-.second { background-color: green; }
-.third { background-color: #fc8a1e; }
+.first { background-color: #0060A3; height:12px;}
+.second { background-color: green; height:12px;}
+.third { background-color: #FF5100; height:12px;}
 
 @keyframes slideText {
     0%,20%   { transform: translateY(0); }      /* Kaustubh visible */
