--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@ p {
 <body>
 
 <div class="top-bar">
-    <a href="https://kaustubh77rm.io/index" class="back-button">← Back</a>
+    <a href="https://kaustubh77rm.github.io/index" class="back-button">← Back</a>
 </div>
 
 <div class="container">
@@ -367,3 +367,4 @@ document.querySelectorAll(".dropdown-header, .sub-header").forEach(btn => {
 
 </body>
 </html>
+
