--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@ p {
 <body>
 
 <div class="top-bar">
-    <a href="https://kaustubh77rm.github.io/index" class="back-button">← Back</a>
+    <a href="https://kaustubh77rm.io/index" class="back-button">← Back</a>
 </div>
 
 <div class="container">
@@ -275,7 +275,7 @@ p {
             <div class="sub-item">
                 <button class="sub-header">BE – Computer Science & Engineering <span>▼</span></button>
                 <div class="sub-content">
-                    <p>HVPM COET, Amravati</p>
+                    <p>Hanuman Vyayam Prasarak Mandal's College of Engineering & Technology, Amravati, Maharashtra, India</p>
                     <p>2023 · CGPA: 8.35</p>
                 </div>
             </div>
@@ -283,7 +283,7 @@ p {
             <div class="sub-item">
                 <button class="sub-header">Diploma – Computer Engineering <span>▼</span></button>
                 <div class="sub-content">
-                    <p>Government Polytechnic, Amravati</p>
+                    <p>Government Polytechnic, Amravati, Maharashtra, India</p>
                     <p>2020 · 79.13%</p>
                 </div>
             </div>
@@ -291,7 +291,7 @@ p {
             <div class="sub-item">
                 <button class="sub-header">SSC (10th Standard) <span>▼</span></button>
                 <div class="sub-content">
-                    <p>St. Francis High School</p>
+                    <p>St. Francis High School, Amravati, Maharashtra, India</p>
                     <p>2017 · 86.20%</p>
                 </div>
             </div>
@@ -305,7 +305,7 @@ p {
         <div class="dropdown-content">
 
             <div class="sub-item">
-                <button class="sub-header">Anime & Cartoon <span>▼</span></button>
+                <button class="sub-header">🤩 Anime & Cartoon <span>▼</span></button>
                 <div class="sub-content">
                     <p>Detective Conan</p>
                     <p>Naruto</p>
@@ -319,7 +319,7 @@ p {
             </div>
 
             <div class="sub-item">
-                <button class="sub-header">TV Series <span>▼</span></button>
+                <button class="sub-header">📺 TV Series <span>▼</span></button>
                 <div class="sub-content">
                     <p>Friends</p>
                     <p>HIMYM</p>
@@ -330,7 +330,7 @@ p {
             </div>
 
             <div class="sub-item">
-                <button class="sub-header">Music <span>▼</span></button>
+                <button class="sub-header">🎵 Music <span>▼</span></button>
                 <div class="sub-content">
                     <p>Pasoori</p>
                     <p>Roads Untraveled</p>
@@ -340,12 +340,15 @@ p {
             </div>
 
             <div class="sub-item">
-                <button class="sub-header">Movies <span>▼</span></button>
+                <button class="sub-header">🍿 Movies <span>▼</span></button>
                 <div class="sub-content">
                     <p>The Godfather I & II</p>
                     <p>Inception</p>
                     <p>3 Idiots</p>
                     <p>Student of the Year</p>
+                    <p>Skyfall</p>
+                    <p>Casino Royale</p>
+                    <p>Mission Impossible - Ghost Protocol</p>
                 </div>
             </div>
 
@@ -367,4 +370,3 @@ document.querySelectorAll(".dropdown-header, .sub-header").forEach(btn => {
 
 </body>
 </html>
-
