--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ footer {
     <div class="links">
         <button class="button-35" onclick="location.href='about.html'">About Me</button>
         <button class="button-35" onclick="location.href='projects.html'">Projects</button>
-        <button class="button-35" onclick="location.href='contact.html'">Contact</button>
+        <button class="button-35" onclick="location.href='contact.html'">Social Media</button>
         <button class="button-35" onclick="location.href='articles/Column.html'">My Column</button>
     </div>
 </main>
