--- a/contact.html
+++ b/contact.html
@@ -119,9 +119,10 @@ header {
         <span>💼</span> LinkedIn
     </a>
 
-    <a href="https://kaustubh77rm.io/index.html" class="back-button">←</a>
+    <a href="https://kaustubh77rm.github.io/index.html" class="back-button">←</a>
 
 </div>
 
 </body>
 </html>
+
